--- a/src/index.html
+++ b/src/index.html
@@ -36,11 +36,6 @@
 			</div>
 		</header>
 		<main class="main-content _conteiner">
-			<a href="#" class="online-chat">
-				<i class="online-chat-picture _icon-chat">
-				</i>
-				<p class="online-chat-text">Online chat</p>
-			</a>
 			<div class="hero-block">
 				<ul class="hero-block-nav">
 					<li><a href=""><i class="_icon-car2"></i>OSAGO</a></li>
@@ -49,10 +44,15 @@
 					<li><a href=""><i class="_icon-bank-box"></i>Bank cells</a></li>
 					<li><a href=""><i class="_icon-file"></i>Green card</a></li>
 				</ul>
-				<p>
+				<p class="hero-block-text">
 					<span class="text-background text-weight">Compare</span>
 					<span class="text-background"><span> and <span class="text-weight">buy</span> the best solution</span>
 				</p>
+				<a href="#" class="online-chat">
+					<i class="online-chat-picture _icon-chat">
+					</i>
+					<p class="online-chat-text">Online chat</p>
+				</a>
 			</div>
 
 			<div class="services-section">
@@ -181,76 +181,76 @@
 							<a href="#tab-04" class="tabs-item">Partners</a>
 						</div>
 						<div class="tabs-body">
-							<div id="tab-01" class="tabs-block">
-									<ul class="tabs-block-menu">
-										<li class="tabs-block-link"><a href="#">Auto</a></li>
-										<li class="tabs-block-link"><a href="#">Tourism</a></li>
-										<li class="tabs-block-link"><a href="#">Properties</a></li>
-										<li class="tabs-block-link"><a href="#">Accident</a></li>
+							<div id="tab-01" class="tab-block">
+									<ul class="tab-block-menu">
+										<li class="tab-block-menu-list"><a href="#">Auto</a></li>
+										<li class="tab-block-menu-list"><a href="#">Tourism</a></li>
+										<li class="tab-block-menu-list"><a href="#">Properties</a></li>
+										<li class="tab-block-menu-list"><a href="#">Accident</a></li>
 									</ul>
-									<ul class="tabs-block-menu">
-										<li class="tabs-block-link"><a href="#">Insurance rating</a></li>
-										<li class="tabs-block-link"><a href="#">Insurance lawyer</a></li>
-										<li class="tabs-block-link"><a href="#">Specialists</a></li>
-										<li class="tabs-block-link"><a href="#">FAQ</a></li>
+									<ul class="tab-block-menu">
+										<li class="tab-block-menu-list"><a href="#">Insurance rating</a></li>
+										<li class="tab-block-menu-list"><a href="#">Insurance lawyer</a></li>
+										<li class="tab-block-menu-list"><a href="#">Specialists</a></li>
+										<li class="tab-block-menu-list"><a href="#">FAQ</a></li>
 									</ul>
-									<ul class="tabs-block-menu">
-										<li class="tabs-block-link"><a href="#">CASCO</a></li>
-										<li class="tabs-block-link"><a href="#">OSAGO</a></li>
-									</ul>
-							</div>
-							<div id="tab-02" class="tabs-block">
-									<ul class="tabs-block-menu">
-										<li class="tabs-block-link"><a href="#">Fin Auto</a></li>
-										<li class="tabs-block-link"><a href="#">FinTourism</a></li>
-										<li class="tabs-block-link"><a href="#">Properties</a></li>
-										<li class="tabs-block-link"><a href="#">Accident</a></li>
-									</ul>
-									<ul class="tabs-block-menu">
-										<li class="tabs-block-link"><a href="#">Insurance rating</a></li>
-										<li class="tabs-block-link"><a href="#">Insurance lawyer</a></li>
-										<li class="tabs-block-link"><a href="#">Specialists</a></li>
-										<li class="tabs-block-link"><a href="#">FAQ</a></li>
-									</ul>
-									<ul class="tabs-block-menu">
-										<li class="tabs-block-link"><a href="#">CASCO</a></li>
-										<li class="tabs-block-link"><a href="#">OSAGO</a></li>
+									<ul class="tab-block-menu">
+										<li class="tab-block-menu-list"><a href="#">CASCO</a></li>
+										<li class="tab-block-menu-list"><a href="#">OSAGO</a></li>
 									</ul>
 							</div>
-							<div id="tab-03" class="tabs-block">
-									<ul class="tabs-block-menu">
-										<li class="tabs-block-link"><a href="#">Tenders</a></li>
-										<li class="tabs-block-link"><a href="#">Tenders</a></li>
-										<li class="tabs-block-link"><a href="#">Properties</a></li>
-										<li class="tabs-block-link"><a href="#">Accident</a></li>
+							<div id="tab-02" class="tab-block">
+									<ul class="tab-block-menu">
+										<li class="tab-block-menu-list"><a href="#">Fin Auto</a></li>
+										<li class="tab-block-menu-list"><a href="#">FinTourism</a></li>
+										<li class="tab-block-menu-list"><a href="#">Properties</a></li>
+										<li class="tab-block-menu-list"><a href="#">Accident</a></li>
 									</ul>
-									<ul class="tabs-block-menu">
-										<li class="tabs-block-link"><a href="#">Insurance rating</a></li>
-										<li class="tabs-block-link"><a href="#">Insurance lawyer</a></li>
-										<li class="tabs-block-link"><a href="#">Specialists</a></li>
-										<li class="tabs-block-link"><a href="#">FAQ</a></li>
+									<ul class="tab-block-menu">
+										<li class="tab-block-menu-list"><a href="#">Insurance rating</a></li>
+										<li class="tab-block-menu-list"><a href="#">Insurance lawyer</a></li>
+										<li class="tab-block-menu-list"><a href="#">Specialists</a></li>
+										<li class="tab-block-menu-list"><a href="#">FAQ</a></li>
 									</ul>
-									<ul class="tabs-block-menu">
-										<li class="tabs-block-link"><a href="#">CASCO</a></li>
-										<li class="tabs-block-link"><a href="#">OSAGO</a></li>
+									<ul class="tab-block-menu">
+										<li class="tab-block-menu-list"><a href="#">CASCO</a></li>
+										<li class="tab-block-menu-list"><a href="#">OSAGO</a></li>
 									</ul>
 							</div>
-							<div id="tab-04" class="tabs-block">
-									<ul class="tabs-block-menu">
-										<li class="tabs-block-link"><a href="#">Partners</a></li>
-										<li class="tabs-block-link"><a href="#">Partners</a></li>
-										<li class="tabs-block-link"><a href="#">Properties</a></li>
-										<li class="tabs-block-link"><a href="#">Accident</a></li>
+							<div id="tab-03" class="tab-block">
+									<ul class="tab-block-menu">
+										<li class="tab-block-menu-list"><a href="#">Tenders</a></li>
+										<li class="tab-block-menu-list"><a href="#">Tenders</a></li>
+										<li class="tab-block-menu-list"><a href="#">Properties</a></li>
+										<li class="tab-block-menu-list"><a href="#">Accident</a></li>
 									</ul>
-									<ul class="tabs-block-menu">
-										<li class="tabs-block-link"><a href="#">Insurance rating</a></li>
-										<li class="tabs-block-link"><a href="#">Insurance lawyer</a></li>
-										<li class="tabs-block-link"><a href="#">Specialists</a></li>
-										<li class="tabs-block-link"><a href="#">FAQ</a></li>
+									<ul class="tab-block-menu">
+										<li class="tab-block-menu-list"><a href="#">Insurance rating</a></li>
+										<li class="tab-block-menu-list"><a href="#">Insurance lawyer</a></li>
+										<li class="tab-block-menu-list"><a href="#">Specialists</a></li>
+										<li class="tab-block-menu-list"><a href="#">FAQ</a></li>
 									</ul>
-									<ul class="tabs-block-menu">
-										<li class="tabs-block-link"><a href="#">CASCO</a></li>
-										<li class="tabs-block-link"><a href="#">OSAGO</a></li>
+									<ul class="tab-block-menu">
+										<li class="tab-block-menu-list"><a href="#">CASCO</a></li>
+										<li class="tab-block-menu-list"><a href="#">OSAGO</a></li>
+									</ul>
+							</div>
+							<div id="tab-04" class="tab-block">
+									<ul class="tab-block-menu">
+										<li class="tab-block-menu-list"><a href="#">Partners</a></li>
+										<li class="tab-block-menu-list"><a href="#">Partners</a></li>
+										<li class="tab-block-menu-list"><a href="#">Properties</a></li>
+										<li class="tab-block-menu-list"><a href="#">Accident</a></li>
+									</ul>
+									<ul class="tab-block-menu">
+										<li class="tab-block-menu-list"><a href="#">Insurance rating</a></li>
+										<li class="tab-block-menu-list"><a href="#">Insurance lawyer</a></li>
+										<li class="tab-block-menu-list"><a href="#">Specialists</a></li>
+										<li class="tab-block-menu-list"><a href="#">FAQ</a></li>
+									</ul>
+									<ul class="tab-block-menu">
+										<li class="tab-block-menu-list"><a href="#">CASCO</a></li>
+										<li class="tab-block-menu-list"><a href="#">OSAGO</a></li>
 									</ul>
 							</div>
 							
