--- a/src/index.html
+++ b/src/index.html
@@ -38,11 +38,11 @@
 		<main class="main-content _conteiner">
 			<div class="hero-block">
 				<ul class="hero-block-nav">
-					<li><a href=""><i class="_icon-car2"></i>OSAGO</a></li>
-					<li><a href=""><i class="_icon-baggage1"></i>Tourism insurance</a></li>
-					<li><a href=""><i class="_icon-icon-portmone"></i>Credits</a></li>
-					<li><a href=""><i class="_icon-bank-box"></i>Bank cells</a></li>
-					<li><a href=""><i class="_icon-file"></i>Green card</a></li>
+					<li><a href="#"><i class="_icon-car2"></i>OSAGO</a></li>
+					<li><a href="#"><i class="_icon-baggage1"></i>Tourism insurance</a></li>
+					<li><a href="#"><i class="_icon-icon-portmone"></i>Credits</a></li>
+					<li><a href="#"><i class="_icon-bank-box"></i>Bank cells</a></li>
+					<li><a href="#"><i class="_icon-file"></i>Green card</a></li>
 				</ul>
 				<p class="hero-block-text">
 					<span class="text-background text-weight">Compare</span>
@@ -54,38 +54,37 @@
 					<p class="online-chat-text">Online chat</p>
 				</a>
 			</div>
-
 			<div class="services-section">
 				<div class="linkinator">
 					<header class="linkinator-header title">Insurance</header>
 					<ul class="linkinator-body">
 						<li>
-							<a href=""><i class="_icon-services"></i>Services
+							<a href="#"><i class="_icon-services"></i>Services
 								<i class="_icon-angle-right"></i>
 							</a>
 						</li>
 						<li>
-							<a href=""><i class="_icon-feedback"></i>Feedbacks
+							<a href="#"><i class="_icon-feedback"></i>Feedbacks
 								<i class="_icon-angle-right"></i>
 							</a>
 						</li>
 						<li>
-							<a href=""><i class="_icon-rating"></i>Ratings
+							<a href="#"><i class="_icon-rating"></i>Ratings
 								<i class="_icon-angle-right"></i>
 							</a>
 						</li>
 						<li>
-							<a href=""><i class="_icon-company"></i>Insurance companies
+							<a href="#"><i class="_icon-company"></i>Insurance companies
 								<i class="_icon-angle-right"></i>
 							</a>
 						</li>
 						<li>
-							<a href=""><i class="_icon-star"></i>Special offers
+							<a href="#"><i class="_icon-star"></i>Special offers
 								<i class="_icon-angle-right"></i>
 							</a>
 						</li>
 						<li>
-							<a href=""><i class="_icon-lower"></i>Insurance lawyer
+							<a href="#"><i class="_icon-lower"></i>Insurance lawyer
 								<i class="_icon-angle-right"></i>
 							</a>
 						</li>
@@ -147,7 +146,6 @@
 					</ul>
 				</div>
 			</div>
-
 			<div class="benefits-section">
 				<div class="benefits-body">
 					<div class="title">Benefits</div>
@@ -183,74 +181,74 @@
 						<div class="tabs-body">
 							<div id="tab-01" class="tab-block">
 									<ul class="tab-block-menu">
-										<li class="tab-block-menu-list"><a href="#">Auto</a></li>
-										<li class="tab-block-menu-list"><a href="#">Tourism</a></li>
-										<li class="tab-block-menu-list"><a href="#">Properties</a></li>
-										<li class="tab-block-menu-list"><a href="#">Accident</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Auto</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Tourism</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Properties</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Accident</a></li>
 									</ul>
 									<ul class="tab-block-menu">
-										<li class="tab-block-menu-list"><a href="#">Insurance rating</a></li>
-										<li class="tab-block-menu-list"><a href="#">Insurance lawyer</a></li>
-										<li class="tab-block-menu-list"><a href="#">Specialists</a></li>
-										<li class="tab-block-menu-list"><a href="#">FAQ</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Insurance rating</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Insurance lawyer</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Specialists</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">FAQ</a></li>
 									</ul>
 									<ul class="tab-block-menu">
-										<li class="tab-block-menu-list"><a href="#">CASCO</a></li>
-										<li class="tab-block-menu-list"><a href="#">OSAGO</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">CASCO</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">OSAGO</a></li>
 									</ul>
 							</div>
 							<div id="tab-02" class="tab-block">
 									<ul class="tab-block-menu">
-										<li class="tab-block-menu-list"><a href="#">Fin Auto</a></li>
-										<li class="tab-block-menu-list"><a href="#">FinTourism</a></li>
-										<li class="tab-block-menu-list"><a href="#">Properties</a></li>
-										<li class="tab-block-menu-list"><a href="#">Accident</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Fin Auto</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">FinTourism</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Properties</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Accident</a></li>
 									</ul>
 									<ul class="tab-block-menu">
-										<li class="tab-block-menu-list"><a href="#">Insurance rating</a></li>
-										<li class="tab-block-menu-list"><a href="#">Insurance lawyer</a></li>
-										<li class="tab-block-menu-list"><a href="#">Specialists</a></li>
-										<li class="tab-block-menu-list"><a href="#">FAQ</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Insurance rating</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Insurance lawyer</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Specialists</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">FAQ</a></li>
 									</ul>
 									<ul class="tab-block-menu">
-										<li class="tab-block-menu-list"><a href="#">CASCO</a></li>
-										<li class="tab-block-menu-list"><a href="#">OSAGO</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">CASCO</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">OSAGO</a></li>
 									</ul>
 							</div>
 							<div id="tab-03" class="tab-block">
 									<ul class="tab-block-menu">
-										<li class="tab-block-menu-list"><a href="#">Tenders</a></li>
-										<li class="tab-block-menu-list"><a href="#">Tenders</a></li>
-										<li class="tab-block-menu-list"><a href="#">Properties</a></li>
-										<li class="tab-block-menu-list"><a href="#">Accident</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Tenders</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Tenders</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Properties</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Accident</a></li>
 									</ul>
 									<ul class="tab-block-menu">
-										<li class="tab-block-menu-list"><a href="#">Insurance rating</a></li>
-										<li class="tab-block-menu-list"><a href="#">Insurance lawyer</a></li>
-										<li class="tab-block-menu-list"><a href="#">Specialists</a></li>
-										<li class="tab-block-menu-list"><a href="#">FAQ</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Insurance rating</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Insurance lawyer</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Specialists</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">FAQ</a></li>
 									</ul>
 									<ul class="tab-block-menu">
-										<li class="tab-block-menu-list"><a href="#">CASCO</a></li>
-										<li class="tab-block-menu-list"><a href="#">OSAGO</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">CASCO</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">OSAGO</a></li>
 									</ul>
 							</div>
 							<div id="tab-04" class="tab-block">
 									<ul class="tab-block-menu">
-										<li class="tab-block-menu-list"><a href="#">Partners</a></li>
-										<li class="tab-block-menu-list"><a href="#">Partners</a></li>
-										<li class="tab-block-menu-list"><a href="#">Properties</a></li>
-										<li class="tab-block-menu-list"><a href="#">Accident</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Partners</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Partners</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Properties</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Accident</a></li>
 									</ul>
 									<ul class="tab-block-menu">
-										<li class="tab-block-menu-list"><a href="#">Insurance rating</a></li>
-										<li class="tab-block-menu-list"><a href="#">Insurance lawyer</a></li>
-										<li class="tab-block-menu-list"><a href="#">Specialists</a></li>
-										<li class="tab-block-menu-list"><a href="#">FAQ</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Insurance rating</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Insurance lawyer</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">Specialists</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">FAQ</a></li>
 									</ul>
 									<ul class="tab-block-menu">
-										<li class="tab-block-menu-list"><a href="#">CASCO</a></li>
-										<li class="tab-block-menu-list"><a href="#">OSAGO</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">CASCO</a></li>
+										<li class="tab-block-menu-list"><a href="#" class="tab-block-menu-link">OSAGO</a></li>
 									</ul>
 							</div>
 							
@@ -277,9 +275,9 @@
 					</form>
 					<p class="footer-subtext">You can unsubscribe at any time. No spam.</p>
 					<div class="social-media">
-						<a href="#"><i class="_icon-facebook"></i></a>
-						<a href="#"><i class="_icon-twitter-b"></i></a>
-						<a href="#"><i class="_icon-email"></i></a>
+						<a href="#" class="social-media-link"><i class="_icon-facebook"></i></a>
+						<a href="#" class="social-media-link"><i class="_icon-twitter-b"></i></a>
+						<a href="#" class="social-media-link"><i class="_icon-email"></i></a>
 					</div>
 				</div>
 			</div>
